version 10.0.1
date: dd/mm/yyyy
  * when deleting a (plain) conceptualization/lexicalization, its reification through a sense is deleted as well
  * removed deprecated configuration settings for SHACL
  * fixed bug related to some SHACL configuration settings (e.g. validationEnabled) that were actually ignored
  * updated German localization
  * fixed the issues due to case-sensitive user email address comparisons
  * fixed a bug when searching in skosxl:Label
  * changed the renderer in SKOSXL to show directly also skosxl:Label label
  * fixed a bug in the ICV listConceptsRelatedDisjoint
  * fixed ClassCastException in SKOS removeNote
  * fixed illegal base URI when adding an import from file without providing an explicit base URI
  * added missing resource lifecycle annotations in some services
  * update dependency on Sheet2RDF 4.2.1
  
version 10.0
date: 02/08/2021
  * added two transformers, one from EDOAL to flat formats (OWL and SKOS alignment properties) and one from flat formats to EDOAL
  * added documentation generators
  * implemented a content storage service
  * allowed references to files in the content storage in reports (which are returned as zip archives)
  * allowed invocation of ordinary services in custom reports
  * allowed to index specific sections in the Mustache templates used for the rendering of invokable reporters
  * renamed the service compileAndDownloadReport to compileAndExportReport, while allowing to indicate an optional deployer
  * introduced the Time Machine, allowing for the recreation of the state of any resource (up to two hops of context in the graph) at any time in history
  * added support for undo
  * added the possibility in the advancedSearch to not pass the predicate in predicate-object constraints, where the object can be text-searched
  * allowed to disable validation on commit in projects with SHACL validation enabled
  * introduced batch SHACL validation of a repository producing a validation report