@@ -1,10 +1,10 @@
 # A value between https or http. It is related to the protocol used by the server (service provider) on which VocBench will be deployed.
-eu.scheme=https
+saml.scheme=https
 # The name of the service provider (without "http://" and without "/" at the end).
-eu.serverName=example.org
+saml.serverName=example.org
 # The entityID of the Identity Provider. Take this value from metadata file received from the team responsible for registering your instance.
-eu.defaultIDP=entityID
+saml.defaultIDP=entityID
 # The base url of the server (service provider) --> scheme://serverName/contextPath
-eu.entityBaseURL=https://example.org/semanticturkey
+saml.entityBaseURL=https://example.org/semanticturkey
 # The url of VocBench
-eu.redirect=https://example.org/vocbench3
+saml.redirect=https://example.org/vocbench3
