@@ -1,40 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<EntityDescriptor xmlns="urn:oasis:names:tc:SAML:2.0:metadata" ID="_279811a0-0c1b-433a-adaf-827fcb413799" entityID="urn:ec.europa.eu:eulogin:acceptance:saml">
-    <IDPSSODescriptor xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" WantAuthnRequestsSigned="true" protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol" xsi:type="IDPSSODescriptorType">
-        <KeyDescriptor use="signing">
-            <KeyInfo xmlns="http://www.w3.org/2000/09/xmldsig#">
-                <X509Data>
-                    <X509SubjectName>CN=ecas-acceptance-genesis-sts-2020,1.2.840.113549.1.9.1=#162344494749542d454341532d444556454c4f504d454e544065632e6575726f70612e6575,OU=DIGIT,O=European Commission,L=Brussels,C=BE</X509SubjectName>
-                    <X509Certificate>MIIG8zCCBNugAwIBAgIQDnCMXp6buWVaoVcZpCPhajANBgkqhkiG9w0BAQ0FADCBzzELMAkGA1UE BhMCQkUxETAPBgNVBAgMCEJydXNzZWxzMREwDwYDVQQHDAhCcnVzc2VsczEcMBoGA1UECgwTRXVy b3BlYW4gQ29tbWlzc2lvbjEOMAwGA1UECwwFRElHSVQxKjAoBgkqhkiG9w0BCQEWG0ZyZWRlcmlj LlBPRUxTQGVjLmV1cm9wYS5ldTFAMD4GA1UEAww3Tm9uLVBST0QgRUNBUyBDZXJ0aWZpY2F0ZSBB dXRob3JpdHkgKFRFU1QgYW5kIERFViBvbmx5KTAeFw0yMDAyMjUxNDQ4MTNaFw0yMzAyMjcxNDQ4 MTNaMIGtMQswCQYDVQQGEwJCRTERMA8GA1UEBwwIQnJ1c3NlbHMxHDAaBgNVBAoME0V1cm9wZWFu IENvbW1pc3Npb24xDjAMBgNVBAsMBURJR0lUMTIwMAYJKoZIhvcNAQkBFiNESUdJVC1FQ0FTLURF VkVMT1BNRU5UQGVjLmV1cm9wYS5ldTEpMCcGA1UEAwwgZWNhcy1hY2NlcHRhbmNlLWdlbmVzaXMt c3RzLTIwMjAwggGiMA0GCSqGSIb3DQEBAQUAA4IBjwAwggGKAoIBgQCYsDxYRyPmowrgLB0ITOHe RLQ34ty9m5MfO2fznAPTqdhUw3M12TdpGyozHlOnbVQ2FZx2nBalLVmjbaZaDxs2eX9zZ4Z051Hl 5OggdLtD2FrU58TkADXxwFFSBhkJiU7SxtaleKepZyj+XeS80XcT+hSX+anddRDugxYn6hihjMBA 75rHAClYoZ4qOcW65G1qZS/by/3KLXiYOMnIWVw48WqDpPGlDy/hFGmBH7TswEpjbVJnB3tid3L7 oGcMq63dMS1xa9Lg877nCkCRaCGOhX5NgSb3yW1lOe5YIiXugWH1A0oUwwzmeiyDX0713COxkpX6 YpPNPAMxqwrjl/0RniAadawV1QBk8228rQGYysWF+bFiwdcaCdkoSid0VIq6th/BduvO2XwFAr02 o7F3zseVDgCL1wyiRMGC2T14qbfRIL14Vrc7vdROP/EQtUBuFRfDyo+A8BoZXeM8WXvaDdMIRBQa wQNUfh3fl8Y4Z8G58Neh3d3L4uhMLBUq7akCAwEAAaOCAWkwggFlMB8GA1UdIwQYMBaAFJY9Qq9H tnDTZEGF6Hhz1B9gd14WMHkGA1UdEQRyMHCCSWVjYXNhLmNjLmNlYy5ldS5pbnQsZGlnZXVsb2dp bjFhLmNjLmNlYy5ldS5pbnQsZGlnZXVsb2dpbjJhLmNjLmNlYy5ldS5pbnSBI0RJR0lULUVDQVMt REVWRUxPUE1FTlRAZWMuZXVyb3BhLmV1MBEGCWCGSAGG+EIBAQQEAwIE8DALBgNVHQ8EBAMCBPAw HQYDVR0OBBYEFLOynmMqeJucOtUeFqpHgQSWCvUkMAkGA1UdEwQCMAAwOwYDVR0lBDQwMgYIKwYB BQUHAwgGCCsGAQUFBwMBBggrBgEFBQcDAgYIKwYBBQUHAwMGCCsGAQUFBwMEMEAGA1UdHwQ5MDcw NaAzoDGGL2h0dHBzOi8vZWNhcy5hY2NlcHRhbmNlLmVjLmV1cm9wYS5ldS9jYXMvY2EvY3JsMA0G CSqGSIb3DQEBDQUAA4ICAQCc5Hg4ytmak9bjtBYeegtcPIpbPxFtA5mAR3gwtMQwnnDudrlfel5o JYn0JlaTAJ9Jq0J3sRtVfHYuzFKDhSmfYPjBneCehI5POG2F8rYUeRNopVUlGpMMxs2qI1artqOT mj8lF/j2HdhlO8N5pfIpQHtH5dY7UAuF0jQAUHMOcEktw8ElgMSNkgHrZxY1owLn22V8pH8MtG6F h2PItvog8NfxWX11gVpbUmHg0U2OGZ8pOLudwke6HV1HBzN6QGTpcHYVw0/hibl03F9tyQGWrXSo JmyZAbRnZ65ZshU2fRMYE6VE4/5MLldJY7/c2FtO+kyAkGSjrFOsbYFLSFU70/XwuYNgEarelM8i VazG8S2mg3uA10/vuh2qKz09wHtVVQpC9e8s8L8c62eAmNMMQe1rkeCXuMP3TZNap0PxPUD/sCmx lgaEbs9P2vE2mBKepWcUlFTUfIH7naoRgoNwY29NFBxwN29s+revBQrXtZl40i411c3Ld/An4FH8 mDIyVdFn3t+ZmstJFfIIJC8QO5Ucswe59BzGQgbz/PoiHhG5Nn4u2hWc9Eoj9xju/gwdflh1Lfoi z2r6OJuPRUQlSPz27EKM7LaXP0lxOUMoU6N7qOUb5f5ApjAFQ4JeJIQ7Hc6/G0UTsl9O3RYF44U3 nt2smPL9xGP8bxtFonihcQ==</X509Certificate>
-                    <X509Certificate>MIIHPDCCBSSgAwIBAgICB98wDQYJKoZIhvcNAQENBQAwgc8xCzAJBgNVBAYTAkJFMREwDwYDVQQI DAhCcnVzc2VsczERMA8GA1UEBwwIQnJ1c3NlbHMxHDAaBgNVBAoME0V1cm9wZWFuIENvbW1pc3Np b24xDjAMBgNVBAsMBURJR0lUMSowKAYJKoZIhvcNAQkBFhtGcmVkZXJpYy5QT0VMU0BlYy5ldXJv cGEuZXUxQDA+BgNVBAMMN05vbi1QUk9EIEVDQVMgQ2VydGlmaWNhdGUgQXV0aG9yaXR5IChURVNU IGFuZCBERVYgb25seSkwHhcNMTUxMDMwMTQ1MDUzWhcNMzAxMDMwMTQ1MDUzWjCBzzELMAkGA1UE BhMCQkUxETAPBgNVBAgMCEJydXNzZWxzMREwDwYDVQQHDAhCcnVzc2VsczEcMBoGA1UECgwTRXVy b3BlYW4gQ29tbWlzc2lvbjEOMAwGA1UECwwFRElHSVQxKjAoBgkqhkiG9w0BCQEWG0ZyZWRlcmlj LlBPRUxTQGVjLmV1cm9wYS5ldTFAMD4GA1UEAww3Tm9uLVBST0QgRUNBUyBDZXJ0aWZpY2F0ZSBB dXRob3JpdHkgKFRFU1QgYW5kIERFViBvbmx5KTCCAiIwDQYJKoZIhvcNAQEBBQADggIPADCCAgoC ggIBAK+yAiv/LCP1jYOmveAgtG5uT4TtflE3NIQrtdBzzaPfk6TP1ZaQx+zqMOePi2wGDk5P64dZ IdvjE52uP9vD/JxpTNOdGyiKJ7oG6vd+6z9FAaD4qGd20BFkpZ8/92mW8SOcgfl2VjpMztssDSA6 VLvc/vJzKs9jiDuukJ3FJvrrWne3MLwIgUQJ3x2S8upFXDScmnNUaN1o3t0Th7K1XKpCZ3tCxkXG PrmEgKkH7OrQgpNGgUWOmc0T8COgplcnv1Wbhd8ozdggvaVgf5pXin4fLAmqmxE1rdLTx5MdM7MX rfZlJbV7ffBzoZn3vKBT8NPT9xkCcn0wvJ+qT65rKQua0ieSYRj2K5nml3M4Kr2mcsNVLuFpW9BX lxS4cn2NxYSZ/irLyB5ItG5Y8iIYcHRq0FuRcJADnXqYpq4+/Nd4sRpNF9sDLMZyPCMiTaBHq/es TgY5TGhxwyqir9JR4C06oBb0MX0Nq9gL8Ygic05XRQXj8N9/vTxjldrK5pPR/SjNrIYKAu8Q2Hqr 6YPlzrQ03UynR+S/nkPrhKgmSgFvNtWaQnWpdreFj58NfnuE6rtI7+g+bNuJ9DimJ/SmBJy2784O iOF6hek8YhwzU5jFAMismjtVfb12oSR3fqvcvc7V1akF8X7faqNyJhOXh6PfbdJqaS9F4pbLOyYF HMWvAgMBAAGjggEeMIIBGjASBgNVHRMBAf8ECDAGAQH/AgEBMA4GA1UdDwEB/wQEAwIB9jAmBgNV HREEHzAdgRtGcmVkZXJpYy5QT0VMU0BlYy5ldXJvcGEuZXUwEQYJYIZIAYb4QgEBBAQDAgD3MB8G A1UdIwQYMBaAFJY9Qq9HtnDTZEGF6Hhz1B9gd14WMB0GA1UdDgQWBBSWPUKvR7Zw02RBheh4c9Qf YHdeFjA7BgNVHSUENDAyBggrBgEFBQcDCAYIKwYBBQUHAwEGCCsGAQUFBwMCBggrBgEFBQcDAwYI KwYBBQUHAwQwPAYDVR0fBDUwMzAxoC+gLYYraHR0cHM6Ly9lY2FzdC5jYy5jZWMuZXUuaW50Ojcw MDIvY2FzL2NhL2NybDANBgkqhkiG9w0BAQ0FAAOCAgEABe+vgKIOhRfAm8SrClsfQfh1nbpOxUuu e+riaWNQ/+IfA8X9v2HmTiNHYC6DOce0E1VOgWgSYhlyVyDK7MtBmZITuN9qgyOEACb6vRKWBor9 tHvGr//6q2XGDE9Ql/cibaoPYBgGsR9mb8sauqmTIC/FXfbiOPS6v72OgRfhyn3jvp7OsjU8pAhH BiuNPIz+c/hto10Cj6Tz5siEdglmANA8E/fXvztOht3cQ/anvepHcUf5a2HoMpulOjvqrtRB2ktf E33G1gUFkB7NYMR3gocO3o7J8YvaSyNPKmCNOI2ZIeYOrYp7eeTEuCGzCNz/1qWsj/jRV5GraaHz hN2YFXlCCWgbwe/1ejtRG5K7I0y63SyHsrDLvvcr9emGfHvng1JKmu0yNPyjGKAh0Fn6AudvyBMJ Rq5pHaM1DfrNCkroswKJwyqWT9qBih0sgjjXtrAuARWcUszGHwHjq2qce0j/LTl8E6mgfwgFUAzz rVQ9ZR3Qbe6ZqMdAATZbV9QjhQkgZprplswtI9ulZLF2PBT50TkgTKUqoQ3rsiNBSIHWtHWxP6R2 PIFE5owCaVOxOF6X7qX5tk2bYtVBESDkOWTHOXLbGRZj/T47idboyuh25tC7ijvhvPtrQNNoQ+Rj 5kLBRtOxgMktDF2/mIMI7jlr5ZU/pgHw6ZVi0460kUc=</X509Certificate>
-                </X509Data>
-            </KeyInfo>
-        </KeyDescriptor>
-        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:persistent</NameIDFormat>
-        <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
-        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress</NameIDFormat>
-        <NameIDFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified</NameIDFormat>
-        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST" Location="https://ecas.acceptance.ec.europa.eu/cas/login" xsi:type="EndpointType"/>
-        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST-SimpleSign" Location="https://ecas.acceptance.ec.europa.eu/cas/login" xsi:type="EndpointType"/>
-        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://ecas.acceptance.ec.europa.eu/cas/login" xsi:type="EndpointType"/>
-        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:1.0:profiles:browser-post" Location="https://ecas.acceptance.ec.europa.eu/cas/login" xsi:type="EndpointType"/>
-        <Attribute xmlns="urn:oasis:names:tc:SAML:2.0:assertion" FriendlyName="User Identifier" Name="user" NameFormat="urn:oasis:names:tc:SAML:2.0:attrname-format:basic" xsi:type="AttributeType"/>
-        <Attribute xmlns="urn:oasis:names:tc:SAML:2.0:assertion" FriendlyName="Email" Name="email" NameFormat="urn:oasis:names:tc:SAML:2.0:attrname-format:basic" xsi:type="AttributeType"/>
-        <Attribute xmlns="urn:oasis:names:tc:SAML:2.0:assertion" FriendlyName="Organisation" Name="domain" NameFormat="urn:oasis:names:tc:SAML:2.0:attrname-format:basic" xsi:type="AttributeType"/>
-        <Attribute xmlns="urn:oasis:names:tc:SAML:2.0:assertion" FriendlyName="First Name" Name="firstName" NameFormat="urn:oasis:names:tc:SAML:2.0:attrname-format:basic" xsi:type="AttributeType"/>
-        <Attribute xmlns="urn:oasis:names:tc:SAML:2.0:assertion" FriendlyName="Groups" Name="groups" NameFormat="urn:oasis:names:tc:SAML:2.0:attrname-format:basic" xsi:type="AttributeType"/>
-        <Attribute xmlns="urn:oasis:names:tc:SAML:2.0:assertion" FriendlyName="Last Name" Name="lastName" NameFormat="urn:oasis:names:tc:SAML:2.0:attrname-format:basic" xsi:type="AttributeType"/>
-        <Attribute xmlns="urn:oasis:names:tc:SAML:2.0:assertion" FriendlyName="Organisation Username" Name="domainUsername" NameFormat="urn:oasis:names:tc:SAML:2.0:attrname-format:basic" xsi:type="AttributeType"/>
-    </IDPSSODescriptor>
-    <Organization>
-        <OrganizationName xml:lang="en">EU Login - DIGIT - European Commission</OrganizationName>
-        <OrganizationDisplayName xml:lang="en">EU Login - DIGIT - European Commission</OrganizationDisplayName>
-        <OrganizationURL xml:lang="en">https://ecas.ec.europa.eu/cas</OrganizationURL>
-    </Organization>
-    <ContactPerson contactType="support">
-        <Company>EU Login - DIGIT - European Commission</Company>
-        <EmailAddress>EC-CENTRAL-HELPDESK@ec.europa.eu</EmailAddress>
-    </ContactPerson>
-</EntityDescriptor>
-
