@@ -2,6 +2,7 @@ version 10.0.1
 date: dd/mm/yyyy
   * when deleting a (plain) conceptualization/lexicalization, its reification through a sense is deleted as well
   * removed deprecated configuration settings for SHACL
+  * generalized the support for EU-Login to SAML
   * fixed bug related to some SHACL configuration settings (e.g. validationEnabled) that were actually ignored
   * updated German localization
   * fixed the issues due to case-sensitive user email address comparisons
